//  Copyright 2013 Walter Schulze
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.

package funcs;

message DecodeFields {
	optional double DoubleField = 1;
	optional float FloatField = 2;
	optional int64 Int64Field = 3;
	optional uint64 Uint64Field = 4;
	optional int32 Int32Field = 5;
	optional fixed64 Fixed64Field = 6;
	optional fixed32 Fixed32Field = 7;
	optional bool BoolField = 8;
	optional string StringField = 9;


	optional bytes BytesField = 12;
	optional uint32 Uint32Field = 13;
	optional DecodeEnum EnumField = 14;
	optional sfixed32 SFixed32Field = 15;
	optional sfixed64 SFixed64Field = 16;
	optional sint32 SInt32Field = 17;
	optional sint64 SInt64Field = 18;
}

enum DecodeEnum {
	Value1 = 1;
	Value2 = 2;
}